--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,5 +1,7 @@
 .sidebar{
+  position: sticky;
   flex:0.2;
+  top: 80px;
   border-radius: 10px;
   text-align: center;
   height: fit-content;
@@ -27,4 +29,12 @@
   width: 100%;
   height: 60px;border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  object-fit: cover;
+}
+
+.sidebar__stat{
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+
 }
