--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -29,9 +29,26 @@
   width: 100%;
   height: 60px;border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  object-fit: cover;
+  object-fit:cover
 }
 
+.sidebar_top > h4{
+color: gray;
+font-size: 12px;
+}
+
+.sidebar_top >h2{
+  font-size: 18px;
+}
+
+.sidebar_stats{
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid lightgray;
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 
 
 
@@ -43,3 +60,32 @@
 }
 
 
+.sidebar__stat >p {
+  color: gray;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.sidebar_statNumber{
+  font-weight: bold;
+  color: #0a66c2 !important;
+}
+
+.sidebar_bottom {
+  text-align: left;
+  padding: 10px;
+  border: 1px solid lightgray;
+  background-color: white;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+
+.sidebar_recentItem{
+  display: flex;
+  font-size: 13px;
+  color: gray;
+  font-weight: bolder;
+  cursor: pointer;
+  margin-bottom: 5px;
+  padding: 5px;
+}
