--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -80,6 +80,12 @@ font-size: 12px;
   border-radius: 10px;
 }
 
+.sidebar_bottom >p {
+  font-size: 13px;
+  padding-bottom: 10px;
+}
+
+
 .sidebar_recentItem{
   display: flex;
   font-size: 13px;
@@ -88,4 +94,16 @@ font-size: 12px;
   cursor: pointer;
   margin-bottom: 5px;
   padding: 5px;
+}
+
+.sidebar_recentItem:hover {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+.sidebar_hash{
+  margin-right: 10px;
+  margin-left: 10px;
 }
