--- a/src/Feed.css
+++ b/src/Feed.css
@@ -37,3 +37,8 @@ width:100%
 .feed_input>form>button {
   display: none;
 }
+
+.feed_inputOptions {
+  display: flex;
+  justify-content: space-evenly;
+}
