--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   position:sticky ;
+  background-color: white;
   top:0;
   justify-content: space-evenly;
   border-bottom: 0.1px solid lightgray;
